force-app/main/default/objects/Tasks_Comments__c/Tasks_Comments__c.object-meta.xml
<CustomObject>
    <label>Tasks Comments</label>
    <nameField>
        <label>Tasks Comments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>