force-app/main/default/objects/Tasks_Comments__c/fields/Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Team_Members__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Members</label>
    <referenceTo>Team_Members__c</referenceTo>
    <relationshipLabel>Tasks Comments</relationshipLabel>
    <relationshipName>Tasks_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>