force-app/main/default/objects/Tasks_Comments__c/fields/Team_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Team_Tasks__c</fullName>
    <label>Team Tasks</label>
    <referenceTo>Team_Tasks__c</referenceTo>
    <relationshipLabel>Tasks Comments</relationshipLabel>
    <relationshipName>Tasks_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>